--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 			<artifactId>tika-parsers-standard-package</artifactId>
 			<version>2.9.1</version>
 		</dependency>
-		<!-- For HTTP requests to OpenAI -->
+		<!-- For HTTP requests to Groq -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
